--- a/app.json
+++ b/app.json
@@ -1,12 +1,12 @@
 {
-  "name": "Telegram Torrent Leecher",
-  "description": "A Telegram Torrent (and youtube-dl) Leecher based on Pyrogram. Powered by @torrentleechgdrivesupport!",
+  "name": "Telegram Bit",
+  "description": "A Telegram Bot",
   "keywords": [
     "telegram"
   ],
-  "repository": "https://github.com/MaxxRider/chutiyabot",
-  "success_url": "https://t.me/torrentleechgdrivesupport",
-  "website": "https://github.com/MaxxRider/chutiyabot",
+  "repository": "https://github.com/gufimov/maybe-delete-as-f-",
+  "success_url": "https://t.me/maybedeletexx",
+  "website": "https://github.com/gufimov/maybe-delete-as-f-",
   "env": {
     "ENV": {
       "description": "Setting this to ANYTHING will enable webhooks when in env mode",
